--- a/examples/ligo.html
+++ b/examples/ligo.html
@@ -101,8 +101,8 @@
         </p>
         <div class="thereticalTemplate">
             <ni-cartesian-graph id="graph0" ni-control-id="26" value="[]">
-                <ni-cartesian-axis show show-label show-tick-labels="false" auto-scale="exact" label="Time" axis-position="bottom"></ni-cartesian-axis>
-                <ni-cartesian-axis show show-label show-tick-labels="false" auto-scale="exact" label="Strain" axis-position="left"></ni-cartesian-axis>
+                <ni-cartesian-axis show show-label show-tick-labels="none" auto-scale="exact" label="Time" axis-position="bottom"></ni-cartesian-axis>
+                <ni-cartesian-axis show show-label show-tick-labels="none" auto-scale="exact" label="Strain" axis-position="left"></ni-cartesian-axis>
                 <ni-cartesian-plot show label="Theoretical template">
                     <ni-cartesian-plot-renderer line-width="1"></ni-cartesian-plot-renderer>
                 </ni-cartesian-plot>
@@ -156,6 +156,37 @@
             </p>
         </div>
         <p class="story">
+            Whitened and [20, 300] Hz bandpass filter:
+        </p>
+        <div class="asd">
+            <ni-cartesian-graph id="graph3" ni-control-id="32" value="[]">
+
+                <ni-cartesian-axis show axis-position="bottom" show-ticks show-tick-labels="endpoints" auto-scale="none" minimum="67060" maximum="67360" label="Time" axis-position="bottom" axis-ref="xaxis1ref"></ni-cartesian-axis>
+                <ni-cartesian-axis show axis-position="bottom" show-ticks show-tick-labels="endpoints" auto-scale="none" minimum="67058" maximum="67458" label="Time" axis-position="bottom" axis-ref="xaxis2ref"></ni-cartesian-axis>
+                <ni-cartesian-axis show axis-position="bottom" show-ticks show-tick-labels="endpoints" auto-scale="none" minimum="2331" maximum="2624" label="Time" axis-position="bottom" axis-ref="xaxis3ref"></ni-cartesian-axis>
+
+                <ni-cartesian-axis axis-position="left" show-tick-labels="none" auto-scale="none" minimum="-4" maximum="4" label="Whitened Strain" axis-position="left" format="LVSI" grid-lines="false" axis-ref="yaxis1ref"></ni-cartesian-axis>
+                <ni-cartesian-axis axis-position="left" auto-scale="none" minimum="-4" maximum="4" label="Whitened Strain" axis-position="left" format="LVSI" grid-lines="false" axis-ref="yaxis2ref"></ni-cartesian-axis>
+                <ni-cartesian-axis axis-position="left" auto-scale="none" minimum="-4" maximum="4" label="Whitened Strain" axis-position="left" format="LVSI" grid-lines="false" axis-ref="yaxis3ref"></ni-cartesian-axis>
+
+                <ni-cartesian-plot show label="Hanford Observatory" xaxis="xaxis1ref" yaxis="yaxis1ref">
+                    <ni-cartesian-plot-renderer line-width="1"></ni-cartesian-plot-renderer>
+                </ni-cartesian-plot>
+                <ni-cartesian-plot show label="Livingston Observatory" xaxis="xaxis2ref" yaxis="yaxis2ref">
+                    <ni-cartesian-plot-renderer line-width="1"></ni-cartesian-plot-renderer>
+                </ni-cartesian-plot>
+                <ni-cartesian-plot show label="Template" xaxis="xaxis3ref" yaxis="yaxis3ref">
+                    <ni-cartesian-plot-renderer line-width="1"></ni-cartesian-plot-renderer>
+                </ni-cartesian-plot>
+
+            </ni-cartesian-graph>
+            <p>
+                <!-- cursors + bar-fill don't play well together -->
+                <ni-graph-tools ni-control-id='38' binding-info='{"prop":"value","sync":false}' label-id='' graph-name='32'></ni-graph-tools>
+                <ni-plot-legend ni-control-id='36' binding-info='{"prop":"value","sync":false}' label-id='' graph-name='32'></ni-plot-legend>
+            </p>
+        </div>
+        <p class="story">
             The next graph is the spectrogram of the whitened signal recorded by the Handford Observatory zoomed in around the moment of the merging of the two black holes.
             Zoom out to see the spectrogram of the hole 32 seconds long record.
         </p>
@@ -205,6 +236,7 @@
             var graph0 = document.querySelector('#graph0'),
                 graph1 = document.querySelector('#graph1'),
                 graph2 = document.querySelector('#graph2'),
+                graph3 = document.querySelector('#graph3'),
                 intensity1 = document.querySelector('#intensity1'),
                 appReady = typeof graph0.updateData === 'function';
 
@@ -245,6 +277,18 @@
                 success: function(response) {
                     var data = [response.asd_H1, response.asd_L1];
                     graph2.setData(data);
+                },
+                error: function(jqXHR, textStatus, errorThrown) {
+                    console.log(jqXHR, textStatus, errorThrown);
+                }
+            });
+
+            $.ajax({
+                url: 'data/ligoWhitened.json',
+                type: 'GET',
+                success: function(response) {
+                    var data = [response.strain_H1_whitenbp, response.strain_L1_shift, response.NR_H1_whitenbp];
+                    graph3.setData(data);
                 },
                 error: function(jqXHR, textStatus, errorThrown) {
                     console.log(jqXHR, textStatus, errorThrown);
