--- a/examples/ligo.html
+++ b/examples/ligo.html
@@ -45,7 +45,8 @@
 
         .thereticalTemplate ni-cartesian-graph,
         .originalSignal ni-cartesian-graph,
-        .asd ni-cartesian-graph{
+        .asd ni-cartesian-graph,
+        .whitened ni-cartesian-graph {
             display: inline-block;
             width: 800px;
             height: 300px;
@@ -104,7 +105,7 @@
                 <ni-cartesian-axis show show-label show-tick-labels="none" auto-scale="exact" label="Time" axis-position="bottom"></ni-cartesian-axis>
                 <ni-cartesian-axis show show-label show-tick-labels="none" auto-scale="exact" label="Strain" axis-position="left"></ni-cartesian-axis>
                 <ni-cartesian-plot show label="Theoretical template">
-                    <ni-cartesian-plot-renderer line-width="1"></ni-cartesian-plot-renderer>
+                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(203,75,75)"></ni-cartesian-plot-renderer>
                 </ni-cartesian-plot>
             </ni-cartesian-graph>
         </div>
@@ -122,10 +123,10 @@
                 <ni-cartesian-axis show show-ticks show-minor-ticks show-label auto-scale="exact" label="H Strain" axis-position="left" format="LVSI" grid-lines></ni-cartesian-axis>
                 <ni-cartesian-axis show show-ticks show-minor-ticks show-label auto-scale="exact" label="L Strain" axis-position="right" format="LVSI" axis-ref = "L"></ni-cartesian-axis>
                 <ni-cartesian-plot show label="Hanford Observatory">
-                    <ni-cartesian-plot-renderer line-width="1"></ni-cartesian-plot-renderer>
+                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(237,194,64)"></ni-cartesian-plot-renderer>
                 </ni-cartesian-plot>
                 <ni-cartesian-plot show label="Livingston Observatory" yaxis = "L">
-                    <ni-cartesian-plot-renderer line-width="1"></ni-cartesian-plot-renderer>
+                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(175,216,248)"></ni-cartesian-plot-renderer>
                 </ni-cartesian-plot>
             </ni-cartesian-graph>
             <p>
@@ -142,11 +143,11 @@
             <ni-cartesian-graph id="graph2" ni-control-id="30" value="[]">
                 <ni-cartesian-axis show show-ticks show-minor-ticks show-label log-scale auto-scale="none" minimum="10" maximum="2048" label="Frequency (Hz)" axis-position="bottom"></ni-cartesian-axis>
                 <ni-cartesian-axis show show-ticks show-minor-ticks show-label log-scale auto-scale="none" minimum="1.0e-24" maximum="1.0e-19" label="ASD Strain" axis-position="left" format="LVSI" grid-lines></ni-cartesian-axis>
-                <ni-cartesian-plot show="false" label="Hanford Observatory">
-                    <ni-cartesian-plot-renderer line-width="1"></ni-cartesian-plot-renderer>
-                </ni-cartesian-plot>
+                <!--ni-cartesian-plot label="Hanford Observatory">
+                    <ni-cartesian-plot-renderer bar-fill="rgb(237,194,64)"></ni-cartesian-plot-renderer>
+                </ni-cartesian-plot-->
                 <ni-cartesian-plot show label="Livingston Observatory">
-                    <ni-cartesian-plot-renderer bar-fill="auto" line-stroke></ni-cartesian-plot-renderer>
+                    <ni-cartesian-plot-renderer bar-fill="rgb(175,216,248)" line-stroke></ni-cartesian-plot-renderer>
                 </ni-cartesian-plot>
             </ni-cartesian-graph>
             <p>
@@ -158,7 +159,7 @@
         <p class="story">
             Whitened and [20, 300] Hz bandpass filter:
         </p>
-        <div class="asd">
+        <div class="whitened">
             <ni-cartesian-graph id="graph3" ni-control-id="32" value="[]">
 
                 <ni-cartesian-axis show axis-position="bottom" show-ticks show-tick-labels="endpoints" auto-scale="none" minimum="67060" maximum="67360" label="Time" axis-position="bottom" axis-ref="xaxis1ref"></ni-cartesian-axis>
@@ -170,13 +171,13 @@
                 <ni-cartesian-axis axis-position="left" auto-scale="none" minimum="-4" maximum="4" label="Whitened Strain" axis-position="left" format="LVSI" grid-lines="false" axis-ref="yaxis3ref"></ni-cartesian-axis>
 
                 <ni-cartesian-plot show label="Hanford Observatory" xaxis="xaxis1ref" yaxis="yaxis1ref">
-                    <ni-cartesian-plot-renderer line-width="1"></ni-cartesian-plot-renderer>
+                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(237,194,64)"></ni-cartesian-plot-renderer>
                 </ni-cartesian-plot>
                 <ni-cartesian-plot show label="Livingston Observatory" xaxis="xaxis2ref" yaxis="yaxis2ref">
-                    <ni-cartesian-plot-renderer line-width="1"></ni-cartesian-plot-renderer>
+                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(175,216,248)"></ni-cartesian-plot-renderer>
                 </ni-cartesian-plot>
-                <ni-cartesian-plot show label="Template" xaxis="xaxis3ref" yaxis="yaxis3ref">
-                    <ni-cartesian-plot-renderer line-width="1"></ni-cartesian-plot-renderer>
+                <ni-cartesian-plot show label="Theoretical model" xaxis="xaxis3ref" yaxis="yaxis3ref">
+                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(203,75,75)"></ni-cartesian-plot-renderer>
                 </ni-cartesian-plot>
 
             </ni-cartesian-graph>
@@ -275,7 +276,7 @@
                 url: 'data/ligoAsd.json',
                 type: 'GET',
                 success: function(response) {
-                    var data = [response.asd_H1, response.asd_L1];
+                    var data = [/*response.asd_H1,*/ response.asd_L1];
                     graph2.setData(data);
                 },
                 error: function(jqXHR, textStatus, errorThrown) {
