--- a/examples/ligo.html
+++ b/examples/ligo.html
@@ -43,7 +43,10 @@
             margin-bottom: 18px;
         }
 
-        .originalSignal ni-cartesian-graph {
+        .thereticalTemplate ni-cartesian-graph,
+        .originalSignal ni-cartesian-graph,
+        .asd ni-cartesian-graph,
+        .whitened ni-cartesian-graph {
             display: inline-block;
             width: 800px;
             height: 300px;
@@ -68,8 +71,8 @@
 
         .spectrogram ni-intensity-graph {
             position: absolute;
-            left: 150px;
-            width: 400px;
+            left: 100px;
+            width: 500px;
             height: 300px;
             min-height: 50px;
         }
@@ -84,7 +87,7 @@
 
         .spectrogram ni-graph-tools {
             position: absolute;
-            left: 550px;
+            left: 600px;
             bottom: -5px;
         }
     </style>
@@ -93,6 +96,19 @@
 <body>
     <div id="page-wrap">
         <h1>The GW150914 event recorded by Laser Interferometer Gravitational-wave Observatory</h1>
+
+        <p class="story">
+            This is the theoretical model:
+        </p>
+        <div class="thereticalTemplate">
+            <ni-cartesian-graph id="graph0" ni-control-id="26" value="[]">
+                <ni-cartesian-axis show show-label show-tick-labels="none" auto-scale="exact" label="Time" axis-position="bottom"></ni-cartesian-axis>
+                <ni-cartesian-axis show show-label show-tick-labels="none" auto-scale="exact" label="Strain" axis-position="left"></ni-cartesian-axis>
+                <ni-cartesian-plot show label="Theoretical template">
+                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(203,75,75)"></ni-cartesian-plot-renderer>
+                </ni-cartesian-plot>
+            </ni-cartesian-graph>
+        </div>
 
         <p class="story">
             This graph shows the raw data recorded by the Hanford, Washington and Livingston, Lousiana Observatories of a gravitational wave sampled at 4096 Hz.
@@ -104,13 +120,13 @@
         <div class="originalSignal">
             <ni-cartesian-graph id="graph1" ni-control-id="28" value="[]">
                 <ni-cartesian-axis show show-ticks show-minor-ticks show-label label="Time" axis-position="bottom"></ni-cartesian-axis>
-                <ni-cartesian-axis show show-ticks show-minor-ticks show-label label="H Strain" axis-position="left" grid-lines format="LVSI"></ni-cartesian-axis>
-                <ni-cartesian-axis axis-ref = "L" show show-ticks show-minor-ticks show-label label="L Strain" axis-position="right" format="LVSI"></ni-cartesian-axis>
+                <ni-cartesian-axis show show-ticks show-minor-ticks show-label auto-scale="exact" label="H Strain" axis-position="left" format="LVSI" grid-lines></ni-cartesian-axis>
+                <ni-cartesian-axis show show-ticks show-minor-ticks show-label auto-scale="exact" label="L Strain" axis-position="right" format="LVSI" axis-ref = "L"></ni-cartesian-axis>
                 <ni-cartesian-plot show label="Hanford Observatory">
-                    <ni-cartesian-plot-renderer line-width="1"></ni-cartesian-plot-renderer>
+                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(237,194,64)"></ni-cartesian-plot-renderer>
                 </ni-cartesian-plot>
                 <ni-cartesian-plot show label="Livingston Observatory" yaxis = "L">
-                    <ni-cartesian-plot-renderer line-width="1"></ni-cartesian-plot-renderer>
+                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(175,216,248)"></ni-cartesian-plot-renderer>
                 </ni-cartesian-plot>
             </ni-cartesian-graph>
             <p>
@@ -121,13 +137,64 @@
             </p>
         </div>
         <p class="story">
+            Amplitude spectral density:
+        </p>
+        <div class="asd">
+            <ni-cartesian-graph id="graph2" ni-control-id="30" value="[]">
+                <ni-cartesian-axis show show-ticks show-minor-ticks show-label log-scale auto-scale="none" minimum="10" maximum="2048" label="Frequency (Hz)" axis-position="bottom"></ni-cartesian-axis>
+                <ni-cartesian-axis show show-ticks show-minor-ticks show-label log-scale auto-scale="none" minimum="1.0e-24" maximum="1.0e-19" label="ASD Strain" axis-position="left" format="LVSI" grid-lines></ni-cartesian-axis>
+                <!--ni-cartesian-plot label="Hanford Observatory">
+                    <ni-cartesian-plot-renderer bar-fill="rgb(237,194,64)"></ni-cartesian-plot-renderer>
+                </ni-cartesian-plot-->
+                <ni-cartesian-plot show label="Livingston Observatory">
+                    <ni-cartesian-plot-renderer bar-fill="rgb(175,216,248)" line-stroke></ni-cartesian-plot-renderer>
+                </ni-cartesian-plot>
+            </ni-cartesian-graph>
+            <p>
+                <!-- cursors + bar-fill don't play well together -->
+                <ni-graph-tools ni-control-id='38' binding-info='{"prop":"value","sync":false}' label-id='' graph-name='30'></ni-graph-tools>
+                <ni-plot-legend ni-control-id='36' binding-info='{"prop":"value","sync":false}' label-id='' graph-name='30'></ni-plot-legend>
+            </p>
+        </div>
+        <p class="story">
+            Whitened and [20, 300] Hz bandpass filter:
+        </p>
+        <div class="whitened">
+            <ni-cartesian-graph id="graph3" ni-control-id="32" value="[]">
+
+                <ni-cartesian-axis show axis-position="bottom" show-ticks show-tick-labels="endpoints" auto-scale="none" minimum="67060" maximum="67360" label="Time" axis-position="bottom" axis-ref="xaxis1ref"></ni-cartesian-axis>
+                <ni-cartesian-axis show axis-position="bottom" show-ticks show-tick-labels="endpoints" auto-scale="none" minimum="67058" maximum="67458" label="Time" axis-position="bottom" axis-ref="xaxis2ref"></ni-cartesian-axis>
+                <ni-cartesian-axis show axis-position="bottom" show-ticks show-tick-labels="endpoints" auto-scale="none" minimum="2331" maximum="2624" label="Time" axis-position="bottom" axis-ref="xaxis3ref"></ni-cartesian-axis>
+
+                <ni-cartesian-axis axis-position="left" show-tick-labels="none" auto-scale="none" minimum="-4" maximum="4" label="Whitened Strain" axis-position="left" format="LVSI" grid-lines="false" axis-ref="yaxis1ref"></ni-cartesian-axis>
+                <ni-cartesian-axis axis-position="left" auto-scale="none" minimum="-4" maximum="4" label="Whitened Strain" axis-position="left" format="LVSI" grid-lines="false" axis-ref="yaxis2ref"></ni-cartesian-axis>
+                <ni-cartesian-axis axis-position="left" auto-scale="none" minimum="-4" maximum="4" label="Whitened Strain" axis-position="left" format="LVSI" grid-lines="false" axis-ref="yaxis3ref"></ni-cartesian-axis>
+
+                <ni-cartesian-plot show label="Hanford Observatory" xaxis="xaxis1ref" yaxis="yaxis1ref">
+                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(237,194,64)"></ni-cartesian-plot-renderer>
+                </ni-cartesian-plot>
+                <ni-cartesian-plot show label="Livingston Observatory" xaxis="xaxis2ref" yaxis="yaxis2ref">
+                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(175,216,248)"></ni-cartesian-plot-renderer>
+                </ni-cartesian-plot>
+                <ni-cartesian-plot show label="Theoretical model" xaxis="xaxis3ref" yaxis="yaxis3ref">
+                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(203,75,75)"></ni-cartesian-plot-renderer>
+                </ni-cartesian-plot>
+
+            </ni-cartesian-graph>
+            <p>
+                <!-- cursors + bar-fill don't play well together -->
+                <ni-graph-tools ni-control-id='38' binding-info='{"prop":"value","sync":false}' label-id='' graph-name='32'></ni-graph-tools>
+                <ni-plot-legend ni-control-id='36' binding-info='{"prop":"value","sync":false}' label-id='' graph-name='32'></ni-plot-legend>
+            </p>
+        </div>
+        <p class="story">
             The next graph is the spectrogram of the whitened signal recorded by the Handford Observatory zoomed in around the moment of the merging of the two black holes.
             Zoom out to see the spectrogram of the hole 32 seconds long record.
         </p>
         <div class="spectrogram">
             <ni-intensity-graph id="intensity1" ni-control-id="50">
-              <ni-cartesian-axis show show-ticks show-minor-ticks grid-lines show-label label="Time" axis-position="bottom" minimum="2000" maximum="3000" auto-scale='none'></ni-cartesian-axis>
-              <ni-cartesian-axis show show-ticks show-minor-ticks show-endpoints grid-lines show-label label="Frequency (Hz)" axis-position="left"  minimum="0" maximum="50" auto-scale='none'></ni-cartesian-axis>
+              <ni-cartesian-axis show show-ticks show-minor-ticks grid-lines show-label label="Time" axis-position="bottom" minimum="2300" maximum="2800" auto-scale='none'></ni-cartesian-axis>
+              <ni-cartesian-axis show show-ticks show-minor-ticks show-endpoints grid-lines show-label label="Frequency (Hz)" axis-position="left"  minimum="0" maximum="30" auto-scale='none'></ni-cartesian-axis>
               <ni-color-scale show show-tick-labels="all" auto-scale='none' markers='[{"value":-10.6564876212321,"color":"rgba(255,0,0,1)"},{"value":-6,"color":"rgba(255,0,0,1)"},{"value":-1.6357794943288377,"color":"rgba(255,242,0,1)"}]'></ni-color-scale>
             </ni-intensity-graph>
             <ni-graph-tools ni-control-id='50' binding-info='{"prop":"value","sync":false}' label-id='' graph-name='50'></ni-graph-tools>
@@ -167,14 +234,29 @@
         */
 
         var loadData = function() {
-            var graph = document.querySelector('#graph1'),
+            var graph0 = document.querySelector('#graph0'),
+                graph1 = document.querySelector('#graph1'),
+                graph2 = document.querySelector('#graph2'),
+                graph3 = document.querySelector('#graph3'),
                 intensity1 = document.querySelector('#intensity1'),
-                appReady = typeof graph.updateData === 'function';
+                appReady = typeof graph0.updateData === 'function';
 
             if (!appReady) {
                 setTimeout(loadData, 5);
                 return;
             }
+
+            $.ajax({
+                url: 'data/ligoTheoreticalTemplate.json',
+                type: 'GET',
+                success: function(response) {
+                    var data = response.GW150914_4_NR_waveform;
+                    graph0.setData(data);
+                },
+                error: function(jqXHR, textStatus, errorThrown) {
+                    console.log(jqXHR, textStatus, errorThrown);
+                }
+            });
 
             $.ajax({
                 url: 'data/ligo',
@@ -183,7 +265,31 @@
                     var str = pako.inflate(response, { to: 'string' }),
                         restored = JSON.parse(str),
                         data = [restored.H_H1_LOSC_4_V1_1126259446_32, restored.L_L1_LOSC_4_V1_1126259446_32];
-                    graph.setData(data);
+                    graph1.setData(data);
+                },
+                error: function(jqXHR, textStatus, errorThrown) {
+                    console.log(jqXHR, textStatus, errorThrown);
+                }
+            });
+
+            $.ajax({
+                url: 'data/ligoAsd.json',
+                type: 'GET',
+                success: function(response) {
+                    var data = [/*response.asd_H1,*/ response.asd_L1];
+                    graph2.setData(data);
+                },
+                error: function(jqXHR, textStatus, errorThrown) {
+                    console.log(jqXHR, textStatus, errorThrown);
+                }
+            });
+
+            $.ajax({
+                url: 'data/ligoWhitened.json',
+                type: 'GET',
+                success: function(response) {
+                    var data = [response.strain_H1_whitenbp, response.strain_L1_shift, response.NR_H1_whitenbp];
+                    graph3.setData(data);
                 },
                 error: function(jqXHR, textStatus, errorThrown) {
                     console.log(jqXHR, textStatus, errorThrown);
