--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Webcharts performance</title>
   </head>
   <body>
-    <H1 style="text-align:center;">Webcharts test drive</H1>
+    <h1 style="text-align:center;">Webcharts test drive</h1>
     <div id="mainbox">
         <div class="card">
             <img src="line-chart.svg">
