--- a/examples/chart_demo.html
+++ b/examples/chart_demo.html
@@ -9,67 +9,88 @@
     <link rel="stylesheet" href="../node_modules/ni-webcharts-legends/styles/webcharts-legends.icons.css" />
     <link rel="stylesheet" href="../node_modules/ni-webcharts-legends/styles/webcharts-legends.css" />
 
-    <link rel="import" href="../node_modules/ni-webcharts-legends/dist/webcharts-legends.min.html"/>
+    <link rel="import" href="../node_modules/ni-webcharts-legends/dist/webcharts-legends.min.html" />
     <script type="text/javascript" src="../node_modules/webcomponents-lite/webcomponents-lite.js"></script>
     <style>
         #page-wrap {
             width: 1200px;
             margin: 0 auto;
         }
-        
+
         ni-chart {
             display: inline-block;
             width: 1000px;
-            height: 300px;
+            height: 400px;
             min-height: 50px;
+            padding-top: 35px;
         }
-        
+
         ni-chart text {
             stroke: none;
             stroke-width: 1px;
             font-size: 12px;
             font-family: sans-serif;
-            fill: #4F4F4F;
+            fill: #222266;
+        }
+
+        ni-graph-tools {
+            position: absolute;
+            left: 840px;
+            top: 5px;
+        }
+
+        fieldset {
+            width: 200px;
+            border-style: solid;
+            border-width: 1px;
         }
     </style>
 </head>
+
 <body>
 
     <div id="page-wrap">
-        <h1>Demo Chart</h1>
-        <ni-chart id="chart" ni-control-id="28" buffer-size="1000" value="[]">
-            <ni-cartesian-axis show label="Samples" show-label show-tick-labels="all" axis-position="bottom" auto-scale="sliding-window" minimum="0" maximum="1000" grid-lines show-ticks></ni-cartesian-axis>
-            <ni-cartesian-axis id="chartY" show show-ticks show-minor-ticks label="Amplitude" show-label axis-position="left" minimum="-10"
-                    maximum="10" auto-scale="none" grid-lines></ni-cartesian-axis>
-            <ni-cartesian-plot show label="Waveforms">
-                <ni-cartesian-plot-renderer line-width="1" line-stroke="#0087FF"></ni-cartesian-plot-renderer>
-            </ni-cartesian-plot>
-        </ni-chart>
-
-        <p>
+        <h1>Waveform generator connected to a Chart</h1>
+        <div id="chart div" style="position: relative;">
+            <ni-chart id="chart" ni-control-id="28" buffer-size="1000" value="[]">
+                <ni-cartesian-axis show label="Samples" show-label show-tick-labels="all" axis-position="bottom" auto-scale="sliding-window" minimum="0" maximum="1000" grid-lines show-ticks></ni-cartesian-axis>
+                <ni-cartesian-axis id="chartY" show show-ticks show-minor-ticks label="Amplitude" show-label axis-position="left" minimum="-10" maximum="10" auto-scale="none" grid-lines></ni-cartesian-axis>
+                <ni-cartesian-plot show label="Waveforms">
+                    <ni-cartesian-plot-renderer line-width="1" line-stroke="#0087FF"></ni-cartesian-plot-renderer>
+                </ni-cartesian-plot>
+            </ni-chart>
             <ni-graph-tools ni-control-id='38' binding-info='{"prop":"value","sync":true}' label-id='' graph-name='28'></ni-graph-tools>
-        </p>
+        </div>
 
-        <fieldset id="formWave">
-            <legend>Signal Waveform</legend>
-            <input type="radio" id="r1" name="myRadio" value="1" checked="checked" /> Sine <br />
-            <input type="radio" id="r2" name="myRadio" value="2" /> Square <br />
-            <input type="radio" id="r3" name="myRadio" value="3" /> Sawtooth <br />
-            <input type="radio" id="r4" name="myRadio" value="4" /> Triangle <br />
-            <input type="radio" id="r5" name="myRadio" value="5" /> Noise <br />
-        </fieldset>
+        <table>
+            <tr>
+                <td>
+                    <fieldset id="formWave">
+                        <legend>Signal Waveform</legend>
+                        <input type="radio" id="r1" name="myRadio" value="1" checked="checked" /> Sine <br />
+                        <input type="radio" id="r2" name="myRadio" value="2" /> Square <br />
+                        <input type="radio" id="r3" name="myRadio" value="3" /> Sawtooth <br />
+                        <input type="radio" id="r4" name="myRadio" value="4" /> Triangle <br />
+                        <input type="radio" id="r5" name="myRadio" value="5" /> Noise <br />
+                    </fieldset>
 
-        <p>Waveform Frequency: <input id="frequency" type="text" value="10" style="text-align: right; width:5em"> Hz</p>
-        <p>Waveform Amplitude: <input id="amplitude" type="text" value="5" style="text-align: right; width:5em"> </p>
-        <fieldset id="formAutoscale">
-            <legend>Autoscale type</legend>
-            <input type="radio" id="r1" name="myRadio2" value="none" checked="checked" /> None <br />
-            <input type="radio" id="r2" name="myRadio2" value="exact" /> Exact <br />
-            <input type="radio" id="r3" name="myRadio2" value="growexact" /> Grow Exact <br />
-            <input type="radio" id="r4" name="myRadio2" value="loose" /> Loose <br />
-            <input type="radio" id="r5" name="myRadio2" value="growloose" /> Grow Loose <br />
-        </fieldset>
+                    <p>Waveform Frequency: <input id="frequency" type="text" value="10" style="text-align: right; width:5em"> Hz</p>
+                    <p>Waveform Amplitude: <input id="amplitude" type="text" value="5" style="text-align: right; width:5em"> </p>
+                </td>
+                <td style="vertical-align: top;">
+                    <fieldset id="formAutoscale">
+                        <legend>Autoscale type</legend>
+                        <input type="radio" id="r1" name="myRadio2" value="none" checked="checked" /> None <br />
+                        <input type="radio" id="r2" name="myRadio2" value="exact" /> Exact <br />
+                        <input type="radio" id="r3" name="myRadio2" value="growexact" /> Grow Exact <br />
+                        <input type="radio" id="r4" name="myRadio2" value="loose" /> Loose <br />
+                        <input type="radio" id="r5" name="myRadio2" value="growloose" /> Grow Loose <br />
+                    </fieldset>
+                </td>
+            </tr>
+        </table>
     </div>
     <script defer type="text/javascript" src="./chart-demo.js"></script>
 </body>
+
 </html>
