touch-action: none

--- a/examples/ligo.html
+++ b/examples/ligo.html
@@ -66,6 +66,7 @@
             width: 800px;
             height: 300px;
             min-height: 50px;
+            touch-action: none;
         }
 
         .theoreticalTemplate ni-cartesian-axis {
