Comparing the scatter with different shapes and larger data set for intensity

--- a/performance/scatter_graph.html
+++ b/performance/scatter_graph.html
@@ -68,6 +68,18 @@
             <input type="radio" name="autoscale" value="0" /> Off <br />
             <input type="radio" name="autoscale" value="1" checked="checked"/> On <br />
         </fieldset>
+
+        <fieldset id="pointshape_form" style="display: inline-block;">
+            <legend>Point shape</legend>
+            <input type="radio" name="pointshape" value="circle" />circle<br />
+            <input type="radio" name="pointshape" value="square" />square<br />
+            <input type="radio" name="pointshape" value="rectangle" />rectangle<br />
+            <input type="radio" name="pointshape" value="diamond" />diamond<br />
+            <input type="radio" name="pointshape" value="triangle" />triangle<br />
+            <input type="radio" name="pointshape" value="cross" checked="checked" />cross<br />
+            <input type="radio" name="pointshape" value="ellipse" />ellipse<br />
+            <input type="radio" name="pointshape" value="plus" />plus<br />
+        </fieldset>
     </div>
 
     <div id="fps"></div>
