--- a/performance/intensity-graph.html
+++ b/performance/intensity-graph.html
@@ -40,7 +40,8 @@
             <input type="radio" name="samples" value="1000" />1000<br />
             <input type="radio" name="samples" value="10000" />10000<br />
             <input type="radio" name="samples" value="100000" checked="checked" />100000<br />
-            <input type="radio" name="samples" value="250000" />250000<br />
+            <input type="radio" name="samples" value="1000000" />1000000<br />
+            <input type="radio" name="samples" value="2500000" />2500000<br />
         </fieldset>
     </div>
 
