Improving the speed and range of the intensity graph benchmark

--- a/performance/intensity-graph.html
+++ b/performance/intensity-graph.html
@@ -9,7 +9,7 @@
     <style>
         ni-intensity-graph {
             display: inline-block;
-            width:800px;
+            width: 900px;
             height: 300px;
             min-height: 50px;
         }
@@ -40,6 +40,7 @@
             <input type="radio" name="samples" value="1000" />1000<br />
             <input type="radio" name="samples" value="10000" />10000<br />
             <input type="radio" name="samples" value="100000" checked="checked" />100000<br />
+            <input type="radio" name="samples" value="250000" />250000<br />
             <input type="radio" name="samples" value="1000000" />1000000<br />
             <input type="radio" name="samples" value="2500000" />2500000<br />
         </fieldset>
