--- a/examples/vostok.html
+++ b/examples/vostok.html
@@ -82,9 +82,7 @@
             };
         });
 
-        graph.value = JSON.stringify(data);
-
-        console.log(graph.value);
+        graph.setAttribute('value', JSON.stringify(data));
     </script>
 </body>
 
