--- a/examples/ligo.html
+++ b/examples/ligo.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../node_modules/jqwidgets-framework/jqwidgets/styles/jqx.fresh.css" />
     <link rel="stylesheet" href="../node_modules/ni-webcharts-legends/styles/webcharts-legends.icons.css" />
     <link rel="stylesheet" href="../node_modules/ni-webcharts-legends/styles/webcharts-legends.css" />
-    <link rel="stylesheet" href="../something.css" />
+    <link rel="stylesheet" href="../fiftyShadesOfPink.css" />
 
     <link rel="import" href="../node_modules/ni-webcharts/dist/webcharts.min.html"/>
     <link rel="import" href="../node_modules/ni-webcharts-legends/dist/webcharts-legends.min.html"/>
@@ -140,7 +140,7 @@
 
 <body>
     <div id="page-wrap">
-        <h1 class="hCustom">The GW150914 event recorded by Laser Interferometer Gravitational-wave Observatory</h1>
+        <h1 class="customTitle">The GW150914 event recorded by Laser Interferometer Gravitational-wave Observatory</h1>
 
         <p class="paragraph">
             This is the theoretical model:
@@ -236,7 +236,7 @@
             The signal is in the hearing range. Click <a class="button" onclick="playSound()">here</a> to listen to it.
         </p>
         <p class="paragraph">
-            Read more <a class="hyperL" href="https://en.wikipedia.org/wiki/GW151226">here</a>
+            Read more <a class="hyperlink" href="https://en.wikipedia.org/wiki/GW151226">here</a>
             and <a href="https://losc.ligo.org/s/events/GW150914/GW150914_tutorial.html">here</a>.
         </p>
     </div>
