--- a/examples/ligo.html
+++ b/examples/ligo.html
@@ -4,6 +4,7 @@
 <head>
     <title>32 seconds around the GW150914 event</title>
 
+    <link rel="stylesheet" href="../node_modules/ni-webcharts/styles/webchartsLight.css" />
     <link rel="stylesheet" href="../node_modules/jqwidgets-framework/jqwidgets/styles/jqx.base.css" />
     <link rel="stylesheet" href="../node_modules/jqwidgets-framework/jqwidgets/styles/jqx.fresh.css" />
     <link rel="stylesheet" href="../node_modules/ni-webcharts-legends/styles/webcharts-legends.icons.css" />
