--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <tr><td style="padding-left: 1em"><a href="examples/audio-graph.html">Audio waveform: Doctor Who theme</a></td></tr>
                     <tr><td style="padding-left: 1em"><a href="examples/ligo.html">Large dataset: LIGO recording</a></td></tr>
                     <tr><td style="padding-left: 1em"><a href="examples/chart_demo.html">Waveform Generator</a></td></tr>
+                    <tr><td style="padding-left: 1em"><a href="examples/intensity.html">Intensity</a></td></tr>
                 </tbody></table>
         </div>
         <div class="card">
