--- a/examples/intensity.html
+++ b/examples/intensity.html
@@ -26,15 +26,32 @@
         <h1>Intensity graph</h1>
 
         <ni-intensity-graph id="intensity1" ni-control-id="50">
-          <ni-cartesian-axis show log-scale show-ticks show-minor-ticks show-tick-labels="all" grid-lines show-label label="Width" axis-position="bottom" minimum="1" maximum="1000" auto-scale='none'></ni-cartesian-axis>
-          <ni-cartesian-axis show log-scale show-ticks show-minor-ticks show-tick-labels="all" show-endpoints grid-lines show-label label="Height" axis-position="left"  minimum="1" maximum="1000" auto-scale='none'></ni-cartesian-axis>
-          <ni-color-scale show show-tick-labels="endpoints" auto-scale="none" markers='[{"value":0,"color":"rgba(255, 255, 255,1)"},{"value":1,"color":"rgba(0,0,0,1)"}]'></ni-color-scale>
+          <ni-cartesian-axis id="horizontalAxis" show log-scale show-ticks show-minor-ticks show-tick-labels="all" grid-lines show-label label="Width" axis-position="bottom" minimum="1" maximum="1000" auto-scale='none'></ni-cartesian-axis>
+          <ni-cartesian-axis id="verticalAxis" show log-scale show-ticks show-minor-ticks show-tick-labels="all" show-endpoints grid-lines show-label label="Height" axis-position="left"  minimum="1" maximum="1000" auto-scale='none'></ni-cartesian-axis>
+          <ni-color-scale show show-tick-labels="endpoints" auto-scale="none" markers='[{"value":0,"color":"rgba(0,0,0,0)"},{"value":1,"color":"rgba(0,0,0,1)"}]'></ni-color-scale>
         </ni-intensity-graph>
+
+        <td style="vertical-align: top;">
+            <fieldset id="horizontalAxisMode">
+                <legend>Horizontal axis mode</legend>
+                <input type="radio" id="r1" name="horizontalAxisMode" value="log" checked="checked" /> Log <br />
+                <input type="radio" id="r2" name="horizontalAxisMode" value="linear" /> Linear <br />
+            </fieldset>
+            <fieldset id="verticalAxisMode">
+                <legend>Horizontal axis mode</legend>
+                <input type="radio" id="r1" name="verticalAxisMode" value="log" checked="checked" /> Log <br />
+                <input type="radio" id="r2" name="verticalAxisMode" value="linear" /> Linear <br />
+            </fieldset>
+        </td>
     </div>
 
     <script>
         var graph = document.querySelector('#intensity1');
-        var data = [], column, i, j, w = 1000, h = 1000;
+        var data = [], column, i, j, w = 1000, h = 1000, log = Math.log, exp = Math.exp, logw = log(w), logh = log(h);
+
+        function set(i, j, v) {
+            data[i|0][j|0] = v;
+        }
 
         for(i = 0; i < w; i++) {
             column = [];
@@ -44,16 +61,32 @@
             data.push(column);
         }
 
-        for(i = w/4; i < 3*w/4; i++) {
-            data[i][h/4] = 1;
-            data[i][3*h/4] = 1;
+        for(i = exp(logw/4); i < exp(3*logw/4); i++) {
+            set(i, exp(logh/4), 1);
+            set(i, exp(3*logh/4), 1);
         }
-        for(j = w/4; j < 3*h/4; j++) {
-            data[w/4][j] = 1;
-            data[3*w/4][j] = 1;
+        for(j = exp(logh/4); j < exp(3*logh/4); j++) {
+            set(exp(logw/4), j, 1);
+            set(exp(3*logw/4), j, 1);
         }
 
         graph.setAttribute('value', JSON.stringify(data));
+
+        var horizontalAxisMode = document.querySelector("#horizontalAxisMode");
+        horizontalAxisMode.onclick = function () {
+            var sel = document.querySelector('input[name="horizontalAxisMode"]:checked').value,
+                axis = document.querySelector('#horizontalAxis');
+
+            horizontalAxis.logScale = sel === 'log';
+        }
+
+        var horizontalAxisMode = document.querySelector("#verticalAxisMode");
+        verticalAxisMode.onclick = function () {
+            var sel = document.querySelector('input[name="verticalAxisMode"]:checked').value,
+                axis = document.querySelector('#verticalAxis');
+
+            verticalAxis.logScale = sel === 'log';
+        }
     </script>
 </body>
 
