--- a/examples/intensity.html
+++ b/examples/intensity.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Vostok ice core temperatures and CO2 concentrations</title>
+    <title>Intensity graph with logarithmic axes</title>
     <link rel="stylesheet" href="../node_modules/ni-webcharts/styles/webchartsLight.css" />
     <link rel="import" href="../node_modules/ni-webcharts/dist/webcharts.min.html"/>
     <script type="text/javascript" src="../node_modules/webcomponents-lite/webcomponents-lite.js"></script>
@@ -38,7 +38,7 @@
                 <input type="radio" id="r2" name="horizontalAxisMode" value="linear" /> Linear <br />
             </fieldset>
             <fieldset id="verticalAxisMode">
-                <legend>Horizontal axis mode</legend>
+                <legend>Vertical axis mode</legend>
                 <input type="radio" id="r1" name="verticalAxisMode" value="log" checked="checked" /> Log <br />
                 <input type="radio" id="r2" name="verticalAxisMode" value="linear" /> Linear <br />
             </fieldset>
