Set different colors to axis and axis tick labels

--- a/examples/chart_demo.html
+++ b/examples/chart_demo.html
@@ -24,6 +24,19 @@
             height: 400px;
             min-height: 50px;
             padding-top: 35px;
+            color: red;
+        }
+
+        ni-chart .axisLabels {
+            color: blue;
+        }
+
+        ni-chart .axisLabels.y1Label {
+            color: cyan;
+        }
+
+        ni-chart ni-grid-div {
+            color: green;
         }
 
         ni-chart text {
